--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,55 @@ h1 {
   max-Width: 1280px;
   margin: 0 auto;
   min-Height: 100vh;
+  overflow-x: hidden;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+button {
+  -webkit-transition: -webkit-transform 0.3s, -webkit-box-shadow 0.3s;
+  transition: -webkit-transform 0.3s, -webkit-box-shadow 0.3s;
+  transition: transform 0.3s, box-shadow 0.3s;
+  transition: transform 0.3s, box-shadow 0.3s, -webkit-transform 0.3s, -webkit-box-shadow 0.3s;
+}
+
+button:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+article {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+textarea {
+  cursor: pointer;
+}
+
+.footer_subscribe-textarea:hover,
+.footer_subscribe-textarea:focus,
+.footer_subscribe-textarea:active {
+  border-color: #007bff;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #007bff;
+}
+
+.header_tickets {
+  -webkit-transition: -webkit-transform 0.1s, -webkit-box-shadow 0.3s;
+  transition: -webkit-transform 0.1s, -webkit-box-shadow 0.3s;
+  transition: transform 0.1s, box-shadow 0.3s;
+  transition: transform 0.1s, box-shadow 0.3s, -webkit-transform 0.1s, -webkit-box-shadow 0.3s;
+}
+
+.header_tickets:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 img:hover {
@@ -35,10 +84,6 @@ a {
   transition: color 0.3s;
 }
 
-a:hover {
-  color: #007bff;
-}
-
 img {
   -webkit-transition: -webkit-transform 0.3s;
   transition: -webkit-transform 0.3s;
@@ -54,7 +99,7 @@ img:hover {
 .modal_worktime {
   color: #FFF;
   width: 170px;
-  font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -71,17 +116,9 @@ img:hover {
           justify-content: space-between;
 }
 
-.menu-cross {
-  position: absolute;
-  width: 12.728px;
-  height: 12.728px;
-  top: 18%;
-  left: 4.5%;
-}
-
 .modal {
   color: #FFF;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   position: fixed;
   top: 0;
   left: 0;
@@ -128,7 +165,7 @@ img:hover {
   margin-top: 68px;
   margin-left: 30px;
   color: #FFF;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
@@ -176,7 +213,7 @@ img:hover {
   list-style: none;
   border-radius: 5px;
   color: #FFF;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -235,7 +272,7 @@ img:hover {
   list-style: none;
   border-radius: 5px;
   color: #FFF;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -351,7 +388,7 @@ img:hover {
   color: #0F0E08;
   border: none;
   background: none;
-  font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -442,7 +479,7 @@ img:hover {
   height: 14px;
   width: 43px;
   color: #687480;
-  font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 700;
@@ -523,7 +560,7 @@ img:hover {
 
 .main_class_name {
   color: #687480;
-  font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -578,7 +615,7 @@ img:hover {
 
 .main_event-name {
   color: #687480;
-  font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -614,7 +651,7 @@ img:hover {
 
 .main_event-p {
   color: #4E4E4E;
-  font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
   font-size: 16px;
   font-style: normal;
   font-weight: 300;
@@ -639,6 +676,12 @@ img:hover {
   line-height: 100%;
 }
 
+.cross {
+  position: absolute;
+  margin-top: 43px;
+  margin-left: -105px;
+}
+
 .subscribe {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -656,6 +699,15 @@ img:hover {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .footer {
@@ -665,7 +717,7 @@ img:hover {
 .footer_subscribe-title {
   color: #FFF;
   text-align: center;
-  font-family: Montserrat;
+  font-family: 'IBM Plex Sans';
   font-size: 48px;
   font-style: normal;
   font-weight: 700;
@@ -674,9 +726,10 @@ img:hover {
 }
 
 .footer_subscribe-subtitle {
+  padding: 5px;
   color: #FFF;
   text-align: center;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -695,7 +748,7 @@ img:hover {
 
 .footer_subscribe-textarea::-webkit-input-placeholder {
   color: #687480;
-  font-family: Montserrat;
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -703,7 +756,7 @@ img:hover {
 
 .footer_subscribe-textarea:-ms-input-placeholder {
   color: #687480;
-  font-family: Montserrat;
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -711,7 +764,7 @@ img:hover {
 
 .footer_subscribe-textarea::-ms-input-placeholder {
   color: #687480;
-  font-family: Montserrat;
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -719,7 +772,7 @@ img:hover {
 
 .footer_subscribe-textarea::placeholder {
   color: #687480;
-  font-family: Montserrat;
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -763,7 +816,7 @@ img:hover {
 
 .footer-logo {
   color: #0F0E08;
-  font-family: Montserrat;
+  font-family: 'IBM Plex Sans';
   font-size: 36px;
   font-style: normal;
   font-weight: 700;
@@ -787,7 +840,7 @@ img:hover {
 
 .footer_worktime {
   color: #0F0E08;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -805,13 +858,13 @@ img:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-family: 'IBM Plex Sans' , 'sans-serif';
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
 }
 
 .footer_worktime-titles {
   color: #0F0E08;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -827,7 +880,7 @@ img:hover {
 
 .footer_contacts-content {
   color: #0F0E08;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -880,7 +933,7 @@ img:hover {
           justify-content: space-between;
   color: #0F0E08;
   margin-top: 87px;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 12px;
   font-style: normal;
   font-weight: 300;
@@ -891,7 +944,6 @@ img:hover {
   cursor: pointer;
 }
 
-/* Style the button to your preference */
 .header_tickets-text {
   padding: 8px 16px;
   color: black;
@@ -906,6 +958,14 @@ img:hover {
     margin-left: 0;
     margin-right: 0;
     margin-top: 40px;
+  }
+  .cross {
+    position: absolute;
+    left: 3.5%;
+    top: 18%;
+    margin-top: 0px;
+    margin-left: 0px;
+    position: absolute;
   }
   .modal__content {
     margin-left: 31px;
@@ -924,6 +984,7 @@ img:hover {
   .header_logo {
     margin-left: 34px;
     margin-top: 39px;
+    z-index: inherit;
   }
   .main_gallery-img3, .main_gallery-img4 {
     display: none;
@@ -939,7 +1000,6 @@ img:hover {
         image-rendering: -moz-crisp-edges;
         image-rendering: -o-pixelated;
         image-rendering: pixelated;
-    /* Prevent image blurring */
   }
   .footer_subscribe-textarea {
     width: 374px;
@@ -984,12 +1044,11 @@ img:hover {
     color: #000;
     margin-top: 64px;
     margin-bottom: 38px;
-    font-family: Montserrat;
+    font-family: 'IBM Plex Sans';
     font-size: 54px;
     font-style: normal;
     font-weight: 700;
     line-height: 120%;
-    /* 64.8px */
   }
   .header_second-block {
     width: 50vw;
@@ -1022,6 +1081,7 @@ img:hover {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: start;
+    margin: 0 auto;
   }
   .main_event-wrapper2 {
     margin-left: 0px;
@@ -1030,6 +1090,26 @@ img:hover {
   .main_event-h1 {
     margin-bottom: 15px;
     margin-top: 32px;
+  }
+  .main_gallery-img1, .main_gallery-img2 {
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+  .main_title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    color: #0F0E08;
+    text-align: center;
+    font-family: 'IBM Plex Sans';
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+    /* 36px */
   }
   .main_event-p {
     width: 460px;
@@ -1059,7 +1139,6 @@ img:hover {
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
   .main_acutal-events {
-    margin-left: -21px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1118,6 +1197,15 @@ img:hover {
     margin-left: 65px;
     margin-right: 65px;
   }
+  .modal--navigation {
+    margin-right: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1000px) {
+  .cross {
+    left: 4.5%;
+  }
 }
 
 @media screen and (min-width: 0px) and (max-width: 767px) {
@@ -1125,6 +1213,14 @@ img:hover {
     width: 90%;
     margin: 0 auto;
     height: 1px;
+  }
+  .modal--navigation {
+    margin-right: 20px;
+  }
+  .cross {
+    position: absolute;
+    margin-left: 20px;
+    margin-top: 45px;
   }
   .modal {
     -webkit-box-orient: vertical;
@@ -1134,10 +1230,6 @@ img:hover {
     width: 100%;
     height: auto;
     padding-bottom: 27px;
-  }
-  .menu-cross {
-    top: 9%;
-    left: 8%;
   }
   .modal_content-div {
     width: 120px;
@@ -1230,7 +1322,7 @@ img:hover {
     color: #0F0E08;
     margin-top: 0px;
     text-align: center;
-    font-family: Montserrat;
+    font-family: 'IBM Plex Sans';
     font-size: 28px;
     font-style: normal;
     font-weight: 400;
@@ -1264,13 +1356,39 @@ img:hover {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
+    color: #0F0E08;
+    text-align: center;
+    font-family: 'IBM Plex Sans';
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+    /* 36px */
+    margin-left: 0px;
   }
   .main_event-wrapper2 {
     width: 100%;
     margin-left: 0px;
+    margin-top: 20px;
   }
   .main_event {
     margin-left: 20px;
+  }
+  .main_event-h1 {
+    font-size: 28px;
+  }
+  .main_event-name {
+    text-transform: uppercase;
+    margin-top: 20px;
+    width: 129px;
+    height: 15px;
+    color: #687480;
+    font-family: 'IBM Plex Sans';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 100%;
+    margin-right: 100px;
   }
   .header_logo {
     position: absolute;
@@ -1278,23 +1396,24 @@ img:hover {
     left: 0;
     -webkit-transform: translateY(50%);
             transform: translateY(50%);
-    z-index: 99;
+    z-index: 1;
     margin-left: 20px;
   }
   .header_title {
+    overflow: hidden;
     max-width: 280px;
     height: 93px;
     -ms-flex-negative: 0;
         flex-shrink: 0;
-    color: #000;
+    color: #0F0E08;
     text-align: center;
-    font-family: Montserrat;
-    font-size: 45px;
+    font-family: 'IBM Plex Sans';
+    font-size: 36px;
     font-style: normal;
     font-weight: 700;
+    margin-left: -30px;
     line-height: 100%;
-    /* 45px */
-    margin-left: 20px;
+    /* 36px */
     margin-top: 20px;
     margin-bottom: 20px;
   }
@@ -1421,7 +1540,7 @@ img:hover {
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
     /* margin-top: 87px; */
-    font-family: IBM Plex Sans;
+    font-family: 'IBM Plex Sans';
     font-size: 12px;
     font-style: normal;
     font-weight: 300;
