--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,11 @@
   max-Width: 1280px;
   margin: 0 auto;
   min-Height: 100vh;
+  overflow-x: hidden;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 button {
@@ -74,7 +79,7 @@ img:hover{
 .modal_worktime{
     color: #FFF;
     width: 170px;
-    font-family: IBM Plex Sans;
+    font-family: 'IBM Plex Sans';
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -89,7 +94,7 @@ img:hover{
 
 .modal {
   color: #FFF;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   position: fixed;
   top: 0;
   left: 0;
@@ -123,7 +128,7 @@ img:hover{
   margin-left:30px;
   color: #FFF;
 
-font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
 font-size: 14px;
 font-style: normal;
 font-weight: 600;
@@ -154,7 +159,7 @@ margin-right: 102px;
   border-radius: 5px;
   color: #FFF;
 
-font-family: "IBM Plex Sans";
+font-family: 'IBM Plex Sans';
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -201,7 +206,7 @@ line-height: 100%; /* 22px */
   list-style: none;
   border-radius: 5px;
   color: #FFF;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -300,7 +305,7 @@ margin-right: 30px;
   border:none;
   background: none;
 
-font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
 font-size: 16px;
 font-style: normal;
 font-weight: 500;
@@ -377,7 +382,7 @@ margin-right: 20px;
   width: 43px;
   color: #687480;
 
-font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
 font-size: 14px;
 font-style: normal;
 font-weight: 700;
@@ -442,7 +447,7 @@ margin-top: 200px
 .main_class_name{
   color: #687480;
 
-font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
 font-size: 14px;
 font-style: normal;
 font-weight: 500;
@@ -496,7 +501,7 @@ line-height: 150%;
 .main_event-name{
   color: #687480;
 
-font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
 font-size: 14px;
 font-style: normal;
 font-weight: 500;
@@ -524,7 +529,7 @@ margin-left: 12px;
 .main_event-p{
   color: #4E4E4E;
 
-font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
 font-size: 16px;
 font-style: normal;
 font-weight: 300;
@@ -580,7 +585,7 @@ line-height: 100%;
   color: #FFF;
 
 text-align: center;
-font-family: Montserrat;
+font-family: 'IBM Plex Sans';
 font-size: 48px;
 font-style: normal;
 font-weight: 700;
@@ -589,9 +594,11 @@ margin-bottom: 0px;
 }
 
 .footer_subscribe-subtitle{
+  padding: 5px;
+
   color: #FFF;
   text-align: center;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -609,7 +616,7 @@ margin-bottom: 0px;
 
 .footer_subscribe-textarea::placeholder {
   color: #687480;
-  font-family: Montserrat;
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -641,7 +648,7 @@ height: 457px;
 .footer-logo{
   color: #0F0E08;
 
-font-family: Montserrat;
+font-family: 'IBM Plex Sans';
 font-size: 36px;
 font-style: normal;
 font-weight: 700;
@@ -664,7 +671,7 @@ margin-left:55px
 
 .footer_worktime{
   color: #0F0E08;
-font-family: "IBM Plex Sans";
+font-family: 'IBM Plex Sans';
 font-size: 14px;
 font-style: normal;
 font-weight: 400;
@@ -679,13 +686,13 @@ height: 231px;
 }
 .footer_content{
   display:flex;
-  font-family: 'IBM Plex Sans' , 'sans-serif';
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
 }
 
 .footer_worktime-titles{
   color: #0F0E08;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -700,7 +707,7 @@ height: 231px;
 
 .footer_contacts-content{
   color: #0F0E08;
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -740,7 +747,7 @@ margin-left: 65px;
   color: #0F0E08;
   margin-top: 87px;
 
-font-family: "IBM Plex Sans";
+font-family: 'IBM Plex Sans';
 font-size: 12px;
 font-style: normal;
 font-weight: 300;
@@ -853,7 +860,7 @@ height: 64px;
     margin-top: 64px;
     margin-bottom: 38px;
 
-font-family: Montserrat;
+    font-family: 'IBM Plex Sans';
 font-size: 54px;
 font-style: normal;
 font-weight: 700;
@@ -909,6 +916,13 @@ min-height: auto;
   .main_title {
     display:flex;
     justify-content: center;
+    color: #0F0E08;
+text-align: center;
+font-family: 'IBM Plex Sans';
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%; /* 36px */
   }
 
   .main_event-p {
@@ -1136,7 +1150,7 @@ margin-bottom: 32px;
     margin-top: 0px;
 
 text-align: center;
-font-family: Montserrat;
+font-family: 'IBM Plex Sans';
 font-size: 28px;
 font-style: normal;
 font-weight: 400;
@@ -1163,15 +1177,43 @@ margin-left: 0px;
   .main_title{
     margin-bottom: 0px;
     align-self: center;
+    color: #0F0E08;
+
+text-align: center;
+font-family: 'IBM Plex Sans';
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%; /* 36px */
+margin-left: 0px;
   }
 
   .main_event-wrapper2 {
     width: 100%;
     margin-left: 0px;
+    margin-top: 20px;
   }
 
   .main_event {
     margin-left: 20px;
+  }
+
+  .main_event-h1 {
+    font-size: 28px;
+  }
+
+  .main_event-name{
+    text-transform: uppercase;
+    margin-top: 20px;
+    width: 129px;
+    height: 15px;
+    color: #687480;
+    font-family: 'IBM Plex Sans';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 100%;
+    margin-right: 100px;
   }
 
   .header_logo{
@@ -1184,18 +1226,18 @@ margin-left: 0px;
   }
 
   .header_title{
+    overflow: hidden;
     max-width: 280px;
 height: 93px;
 flex-shrink: 0;
-color: #000;
-
+color: #0F0E08;
 text-align: center;
-font-family: Montserrat;
-font-size: 45px;
+font-family: 'IBM Plex Sans';
+font-size: 36px;
 font-style: normal;
 font-weight: 700;
-line-height: 100%; /* 45px */
-margin-left: 20px;
+margin-left: -30px;
+line-height: 100%; /* 36px */
 margin-top: 20px;
 margin-bottom: 20px;
   }
@@ -1307,7 +1349,7 @@ height: 931px;
   color: #0f0e08;
   justify-content: space-evenly;
   /* margin-top: 87px; */
-  font-family: IBM Plex Sans;
+  font-family: 'IBM Plex Sans';
   font-size: 12px;
   font-style: normal;
   font-weight: 300;
