--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,6 +17,33 @@ h1 {
   overflow-x: hidden;
 }
 
+textarea {
+  border-width: 0px;
+  outline: transparent;
+  border: 1px solid;
+  -webkit-transition: border-color 0.3s ease;
+  transition: border-color 0.3s ease;
+  font-size: 20px;
+}
+
+textarea:focus {
+  border-color: #FFA500;
+}
+
+textarea:hover {
+  background-color: #f0f0f0;
+  cursor: pointer;
+}
+
+textarea:not(:placeholder-shown) {
+  font-weight: bold;
+}
+
+textarea:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
 a:hover {
   text-decoration: underline;
 }
@@ -45,10 +72,9 @@ textarea {
 .footer_subscribe-textarea:hover,
 .footer_subscribe-textarea:focus,
 .footer_subscribe-textarea:active {
-  border-color: #007bff;
   border-width: 1px;
   border-style: solid;
-  border-color: #007bff;
+  border-color: inherit;
 }
 
 .header_tickets {
@@ -649,6 +675,23 @@ img:hover {
   margin-left: 12px;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Initially transparent */
+  z-index: 999;
+  display: none;
+}
+
+.backdrop.show {
+  display: block;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 .main_event-p {
   color: #4E4E4E;
   font-family: 'IBM Plex Sans';
@@ -942,6 +985,10 @@ img:hover {
 
 .header_tickets:hover {
   cursor: pointer;
+}
+
+.header_tickets-text:hover {
+  text-decoration: none;
 }
 
 .header_tickets-text {
