--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -160,7 +160,7 @@ img:hover{
 font-size: 14px;
 font-style: normal;
 font-weight: 600;
-line-height: 150%; /* 21px */
+line-height: 150%;
 }
 .modal_content-div{
   display: flex;
@@ -213,7 +213,7 @@ margin-left: 78px;
 
 font-style: normal;
 font-weight: 500;
-line-height: 100%; /* 22px */
+line-height: 100%;
 }
 
 .modal__content li a:hover {
@@ -560,7 +560,7 @@ margin-left: 12px;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Initially transparent */
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
   display: none;
 }
@@ -760,7 +760,7 @@ height: 231px;
 
 .footer-line{
   width: 1px;
-  height: 240px;
+  height: 250px;
 background: rgba(26, 90, 76, 0.50);
 margin-top: 47px;
 margin-left: 65px;
