--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -55,6 +55,8 @@
 
   &__descr {
     width: 100%;
+    height: max-content;
+
     &__name {
       color: #687480;
       font-family: "IBM Plex Sans", sans-serif;
