--- a/src/styles/blocks/fooret.scss
+++ b/src/styles/blocks/fooret.scss
@@ -1,8 +1,8 @@
 .footer {
-  height: 930px;
+  height: 550px;
 
   @include on-tablet {
-    height: 650px;
+    height: 400px;
   }
 
   @include on-desktop {
@@ -27,11 +27,11 @@
   &__title {
     color: #0F0E08;
     font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 400;
 
     &:hover {
-      color: #0F0E08;
+      color: $green;
     }
   }
 
@@ -79,9 +79,20 @@
   &__text {
     color: #0F0E08;
     font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
+  }
+
+  &__link {
+    color: #0F0E08;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+
+    &:hover {
+      color: $green;
+    }
   }
 }
