--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -65,7 +65,7 @@
   &__humburger {
     position: absolute;
     z-index: 3;
-    top: 11px;
+    top: 40px;
 
     @include on-tablet {
       margin-bottom: 64px;
@@ -144,6 +144,10 @@
       line-height: 100%;
       padding: 20px 68px;
       margin: 0 auto;
+
+      &:hover {
+        color: $green;
+      }
     }
   }
 
