--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -71,8 +71,10 @@
       font-size: 22px;
     }
 
-    &:hover {
-      color: #FFF;
+    &-link {
+      &:hover {
+        color: #FFF8DC;
+      }
     }
   }
 
