--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,12 +1,15 @@
 .header {
-  width: 100%;
   position: relative;
   margin-bottom: 70px;
+  background: url('../images/Museum.jpg') top / cover no-repeat;
+  background-size: 100% 300px;
 
   @include on-tablet {
     height: 384px;
     padding-top: 0;
     margin-bottom: 88px;
+    background-position: right;
+    background-size: 55% auto;
   }
 
   @include on-desktop {
@@ -30,35 +33,21 @@
     }
   }
 
-  &__wrap {
+  &__logo {
+    margin: 0;
     position: absolute;
-    padding-top: 11px;
-    background: url('../images/Museum.jpg') center/cover no-repeat;
-    top: 0;
-    left: 0;
-    width: 320px;
-    height: 300px;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
 
     @include on-tablet {
-      padding: 11px 0 0 55px;
-      left: auto;
-      right: 0;
-      width: 374px;
-      height: 384px;
+      left: 60%;
+      transform: translateX(-60%);
     }
 
     @include on-desktop {
-      width: 645px;
-      height: 100%;
-    }
-  }
-
-  &__logo {
-    display: block;
-    margin: 0 auto;
-
-    @include on-tablet {
-      margin: 0;
+      left: 50%;
+      transform: translateX(-50%);
     }
   }
 
