--- a/src/styles/blocks/fooret.scss
+++ b/src/styles/blocks/fooret.scss
@@ -31,7 +31,7 @@
     font-weight: 400;
 
     &:hover {
-      color: $green;
+      color: #F14A27;
     }
   }
 
@@ -92,7 +92,7 @@
     font-weight: 400;
 
     &:hover {
-      color: $green;
+      color: #F14A27;
     }
   }
 }
