--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,48 @@
 @font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
+  font-family: Montserrat;
+  src: url("../fonts/Montserrat-Regular.ttf");
   font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url("../fonts/Montserrat-Bold.ttf");
+  font-style: normal;
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: Plex;
+  src: url("/src/fonts/IBMPlexSans-Light.ttf");
+  font-style: normal;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: Plex;
+  src: url("/src/fonts/IBMPlexSans-Regular.ttf");
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Plex;
+  src: url("/src/fonts/IBMPlexSans-Medium.ttf");
+  font-style: normal;
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: Plex;
+  src: url("/src/fonts/IBMPlexSans-SemiBold.ttf");
+  font-style: normal;
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: Plex;
+  src: url("/src/fonts/IBMPlexSans-Bold.ttf");
+  font-style: normal;
+  font-weight: 700;
 }
