--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,122 @@
+@import "fonts";
+@import "media/typography-media";
+
 h1 {
-  @extend %h1;
+  color: $c-title;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+h2 {
+  color: $c-button-text;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+}
+
+h3 {
+  color: $c-button-text;
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+.button-text {
+  color: $c-button-text;
+  font-family: Plex, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+  line-height: 100%;
+}
+
+.menu-text-list {
+  color: #FFF;
+  font-size: 16px;
+  font-family: Plex, sans-serif;
+  font-weight: 500;
+}
+
+.schedule {
+  color: #FFF;
+  font-family: Plex, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 140.63%;
+}
+
+.text-menu {
+  color: #FFF;
+  font-family: Plex, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+
+.main-descr-title {
+  color: $c-main-descr-title;
+  font-family: Plex, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.main-descr-date {
+  color: $c-date;
+  font-family: Plex, sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.main-descr-text {
+  color: $c-main-descr-text;
+  font-family: Plex, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.subscrib-text {
+  font-family: Plex, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.footer-title-schedule-contacts {
+  color: $c-button-text;
+  font-family: Plex, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 140.63%;
+}
+
+.footer-text-schedule {
+  @include footer-text;
+
+  font-weight: 600;
+}
+
+.footer-text-contacts {
+  @include footer-text;
+
+  font-weight: 400;
+}
+
+.footer-nav-text {
+  @include footer-text;
+
+  font-weight: 400;
+  line-height: 100%;
+}
+
+.footer-bottom-text {
+  color: $c-button-text;
+  font-family: Plex, sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 140.63%;
+}
+
+.time {
+  font-weight: bold;
 }
