--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,52 @@
-@import "utils";
+@import "reset-style";
 @import "fonts";
+@import "utils";
 @import "typography";
+@import "header";
+@import "main-content";
+@import "galery";
+@import "subscribe";
+@import "footer";
+@import "media/header-media";
+@import "media/main-content-media";
+@import "media/galery-media";
+@import "media/subscribe-media";
+@import "media/footer-media";
 
 body {
   background: $c-gray;
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  margin: 0;
+
+}
+
+html {
+  scroll-behavior: smooth;
+  transition: all .3s ease;
+}
+
+.icone {
+  width: 24px;
+  height: 24px;
+}
+
+.box-scroll {
+  position: fixed;
+  bottom: 50px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  z-index: 1;
+  border: 1px black solid;
+  display: grid;
+  place-content: center;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.33);
+}
+
+.arrow-up {
+  width: 30px;
+  height: 30px;
 }
