--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,19 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
-  }
+@mixin footer-text {
+  color: $c-button-text;
+  font-family: Plex, serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+@mixin display-mobile {
+  display: grid;
+  grid-template-columns: repeat(12, 70px);
+  column-gap: 30px;
+}
+
+@mixin background-image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
 }
