--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
 $c-gray: #eee;
+$c-title: #000;
+$c-button-text: #0F0E08;
+$c-main-descr-title: #687480;
+$c-date: #1A5A4C;
+$c-main-descr-text: #4E4E4E;
+$c-coub: #F14A27;
