--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -34,6 +34,7 @@
           &_item {
             &_link {
               color: #000;
+              transition: all .3s ease;
               &:hover {
                 color: $c-coub;
               }
@@ -51,6 +52,7 @@
         color: #000;
         width: 130px;
         height: fit-content;
+        transition: all .3s ease;
         &:hover {
           color: $c-coub;
         }
