--- a/src/styles/_subscribe.scss
+++ b/src/styles/_subscribe.scss
@@ -2,7 +2,7 @@
   background-image: url(../images/bg-image-folow.png);
 
   @include background-image;
-  
+
   background-position: center !important;
   margin-top: 100px;
   display: flex;
@@ -34,10 +34,11 @@
   border: none;
   transition: all 0.3s ease;
 
-  &:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-  }
+
+}
+
+.input--email {
+  outline: none;
 }
 
 .icone {
