--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/museum-of-arts';
+@import 'blocks/button';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/work-chart';
+@import 'blocks/current-events';
+@import 'blocks/card';
+@import 'blocks/classicism-romanticism';
+@import 'blocks/gallery';
+@import 'blocks/subscription';
+@import 'blocks/footer';
+@import 'blocks/images';
+@import 'blocks/contacts';
 
-body {
-  background: $c-gray;
-}
