--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import "utils";
 @import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/buttons";
+@import "./blocks/container";
+@import "./blocks/header";
+@import "./blocks/icons";
+@import "./blocks/events";
+@import "./blocks/footer";
+@import "./blocks/gallery";
+@import "./blocks/lecture";
+@import "./blocks/main";
+@import "./blocks/page";
+@import "./blocks/nav";
+@import "./blocks/menu";
+@import "./blocks/schedule";
+@import "./blocks/subscribe";
+@import "./blocks/input";
+@import "./blocks/contacts";
