--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,48 @@
 @font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
+  font-family: "IBM Plex Sans";
+  src: url("../fonts/IBM_Plex_San/Raleway-Regular.ttf") format(truetype);
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IBM Plex Sans";
+  src: url("../fonts/IBM_Plex_San/Raleway-Light.ttf") format(truetype);
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IBM Plex Sans";
+  src: url("../fonts/IBM_Plex_San/Raleway-Bold.ttf") format(truetype);
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IBM Plex Sans";
+  src: url("../fonts/IBM_Plex_San/Raleway-Medium.ttf") format(truetype);
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IBM Plex Sans";
+  src: url("../fonts/IBM_Plex_San/Raleway-SemiBold.ttf") format(truetype);
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url("../fonts/Montserrat/PlayfairDisplay-Regular.ttf") format(truetype);
   font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url("../fonts/Montserrat/PlayfairDisplay-Bold.ttf") format(truetype);
+  font-weight: bold;
   font-style: normal;
 }
