--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,19 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+h1,
+h2,
+h3 {
+  font-family: Montserrat, sans-serif;
+  color: $c-black;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+strong {
+  font-weight: 600;
 }
