added task layout Museum

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,6 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/index";
+@import "./tools/index";
+@import "./components/header/index";
+@import "./components/main/index";
+@import "./components/footer/index";
+@import "./components/global-page/index";
