--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -21,7 +21,7 @@
 
     @include on-desktop {
       --margin-bottom: 0;
-      
+
       height: unset;
     }
   }
@@ -44,10 +44,10 @@
 
     @include on-desktop {
       --gap: 30px;
-      
+
       width: unset;
       gap: var(--gap);
-      
+
       @include grid;
     }
   }
@@ -59,83 +59,97 @@
 
     @include on-tablet {
       flex-basis: 45%;
-      
+
       @include hover(transform, scale(1.05));
     }
 
     &--vertical {
-    @include on-desktop {
+      @include on-desktop {
         height: 600px;
       }
     }
-      &--horizontal {
-        @include on-desktop {
-          height: 360px;
-        }
-      }
-      &:first-child {
-        @include on-desktop {
-          grid-column: 1/5;
-        }
-      }
-  
-      &:nth-child(2) {
-        @include on-desktop {
-          grid-column: 5/-1;
-        }
-      }
-  
-      &:nth-child(3) {
-        @include on-desktop {
-          grid-column: 1/9;
-        }
-      }
-  
-      &:last-child {
-        @include on-desktop {
-          grid-column: 9/-1;
-        }
-      }
-    }
-    &__photo {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      background-position: center;
-    }
-  
-    &__nav {
-      grid-column: 1/-1;
-  
-      display: flex;
-      justify-content: center;
-      gap: 22px;
-  
-      user-select: none;
-  
+
+    &--horizontal {
       @include on-desktop {
-        display: none;
+        height: 360px;
       }
     }
-  
-    &__circle {
-      display: block;
-      width: 9px;
-      height: 9px;
-      cursor: pointer;
-      border-radius: 50%;
-  
-      @include hover(transform, scale(2));
-  
-      &--active {
-        background-color: $c-main;
+
+    &:first-child {
+      @include on-desktop {
+        grid-column: 1/5;
       }
-  
-      &:last-child {
-        @include on-tablet {
-          display: none;
-        }
+    }
+
+    &:nth-child(2){
+      @include on-desktop {
+        grid-column: 5/-1;
+      }
+    }
+
+    &:nth-child(3) {
+      @include on-desktop {
+        grid-column: 1/9;
+      }
+    }
+
+    &:last-child {
+      @include on-desktop {
+        grid-column: 9/-1;
       }
     }
   }
+
+  &__photo {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-position: center;
+  }
+
+  &__nav {
+    grid-column: 1/-1;
+
+    display: flex;
+    justify-content: center;
+    gap: 22px;
+
+    user-select: none;
+
+    @include on-desktop {
+      display: none;
+    }
+
+
+    @include on-tablet {
+      justify-content: flex-start;
+      overflow: auto;
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none; 
+      }
+    }
+  }
+
+  &__circle {
+    display: block;
+    width: 9px;
+    height: 9px;
+    cursor: pointer;
+    background-color: $c-slider-circle;
+    border-radius: 50%;
+
+    @include hover(transform, scale(2));
+
+    &--active {
+      background-color: $c-main;
+    }
+
+    &:last-child {
+      @include on-tablet {
+        display: none;
+      }
+    }
+  }
+}
