--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,13 +1,13 @@
-$c-black: #000;
 $c-white: #fff;
+$c-black: #000;
+$c-main: #1a5a4c;
 $c-grey: #687480;
-$c-text: #4e4e4e;
-$c-red: #f14a27;
 $c-button-text: #0f0e08;
 $c-menu-opacity: #18181a;
-$c-slider-circe: #e0e0e0;
-$c-main: #1a5a4c;
-$desktop-max-width: 1440px;
-$desktop-min-width: 1280px;
+$c-text: #4e4e4e;
+$c-slider-circle: #e0e0e0;
+$c-red: #f14a27;
 $tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$desktop-max-width: 1440px;
 $transition-duration: 0.3s;
