--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import "utils";
-@import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "page";
+@import "./components/global";
+@import "./components/header";
+@import "./components/main";
+@import "./components/footer";
