--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,91 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin on-tablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
   }
+}
+
+@mixin on-desktop {
+  @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin add-transition {
+  transition-duration: 500ms;
+  transition-timing-function: cubic-bezier(0, .98, .79, .97);
+}
+
+@mixin anim-on-scroll($nameClass, $property, $toValue, $activValue, $delay) {
+  &#{$nameClass}.anim-show {
+    transition: $property, opacity;
+
+    @include add-transition;
+
+    transition-delay: $delay;
+
+    #{$property}: $toValue;
+    opacity: 0;
+
+    &.active {
+      #{$property}: $activValue;
+      opacity: 1;
+    }
+  }
+
+  &.active .anim-show {
+    #{$property}: $activValue;
+    opacity: 1;
+  }
+}
+
+@mixin hover($property, $toValue) {
+  @include add-transition;
+
+  transition-property: #{$property};
+
+  &:hover {
+    #{$property}: $toValue;
+  }
+}
+
+@mixin content-padding-inline() {
+  padding-inline: 20px;
+
+  @include on-tablet {
+    padding-inline: 30px;
+    max-width: $tablet-min-width;
+    margin-inline: auto;
+  }
+
+  @include on-desktop {
+    max-width: $design-max-width;
+    margin-inline: auto;
+    padding-inline: 55px;
+  }
+}
+
+@mixin page-grid {
+  --columns: 2;
+
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include on-tablet {
+    --columns: 6;
+
+    column-gap: 20px;
+  }
+
+  @include on-desktop {
+    --columns: 12;
+
+    column-gap: 30px;
+  }
+}
+
+@mixin element-grid($columns, $gap) {
+  display: grid;
+  grid-template-columns: repeat($columns, 1fr);
+  column-gap: $gap;
 }
