ready solution layout Museum

--- a/src/styles/components/footer/footer.scss
+++ b/src/styles/components/footer/footer.scss
@@ -39,8 +39,14 @@
     grid-column: 2 / -1;
 
     @include flex-column;
-
     gap: 20px;
+
+    &--map,
+    &--tel,
+    &--fax,
+    &--email {
+      color: $dark-gray;
+    }
   }
 
   &__botton {
