--- a/src/styles/tools/animation.scss
+++ b/src/styles/tools/animation.scss
@@ -1,6 +1,18 @@
 :root {
   --main-transition: 0.5s;
-  --transform: scale(1.2);
+  --transform: scale(1.03);
+}
+
+.header {
+
+  &__button {
+    transition: var(--main-transition);
+
+    &:hover {
+      transform: var(--transform);
+      box-shadow: 0 0 15px $dark-gray;
+    }
+  }
 }
 
 .burger-menu {
@@ -47,6 +59,44 @@
   }
 }
 
+.exhibitions {
+
+   &__img {
+    transition: var(--main-transition);
+
+    &:hover {
+      transform: var(--transform);
+    }
+   }
+}
+
+.gallery {
+
+  &__pictures {
+
+    &--img {
+      transition: var(--main-transition);
+
+      &:hover {
+        transform: var(--transform);
+      }
+    }
+  }
+}
+
+.subscription {
+
+  &__form {
+
+    &--btn {
+      &:active {
+        border: 1px solid $white;
+        background-image: url(../icons/arrow_right.svg);
+      }
+    }
+  }
+}
+
 .footer {
 
   &__botton {
@@ -56,6 +106,16 @@
       transform: var(--transform);
     }
   }
+
+  &__block-contact-us {
+    transition: var(--main-transition);
+
+    &--link {
+      color: inherit;
+
+      &:hover {
+        text-shadow: 0 0 15px $dark-gray;
+      }
+    }
+  }
 }
-
-
