--- a/src/styles/components/global-page/media-breakpoint.scss
+++ b/src/styles/components/global-page/media-breakpoint.scss
@@ -13,7 +13,7 @@
     }
 
     &__burger-menu {
-      margin: 39px 34px;
+      margin: 39px 0;
     }
 
     &__content {
@@ -54,10 +54,11 @@
       }
 
       &__burger-menu {
-        margin: 39px 55px;
+        margin: 39px 0;
       }
 
       &__content {
+        // position: relative;
         grid-column: 1 / 6;
         gap: 90px;
         margin: 0 0 118px;
@@ -65,7 +66,7 @@
         &--line {
           position: absolute;
           left: 0;
-          bottom: 60px;
+          bottom: 0;
 
           @include font-style (700, 14px, 14px, $grayish);
 
@@ -314,7 +315,7 @@
       line-height: 18px;
     }
 
-    &__input {
+    &__form {
       gap: 20px;
 
       &--input {
@@ -322,7 +323,7 @@
         height: 70px;
       }
 
-      &--label {
+      &--btn {
         width: 70px;
         height: 70px;
       }
@@ -335,7 +336,7 @@
       height: 550px;
     }
 
-    &__input {
+    &__form {
       gap: 40px;
     }
   }
