--- a/src/styles/components/main/subscription.scss
+++ b/src/styles/components/main/subscription.scss
@@ -29,7 +29,7 @@
     }
   }
 
-  &__input {
+  &__form {
     display: flex;
     justify-content: center;
 
@@ -45,13 +45,14 @@
 
     &::placeholder {
       font-family: Montserrat, Helvetica, sans-serif;
-      
+
       @include font-style (400, 14px, 14px, $grayish);
     }
 
-    &--label {
+    &--btn {
       cursor: pointer;
       background-color: $pink;
+      border: none;
       width: 50px;
 
       background-image: url(../icons/arrow_right_dark.svg);
