--- a/src/styles/components/header/_header.scss
+++ b/src/styles/components/header/_header.scss
@@ -1,8 +1,6 @@
 .header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  @include absolute-position;
+
   z-index: 1;
 
   &__container {
@@ -10,18 +8,15 @@
   }
 
   &__overlay {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
+    @include absolute-position;
+    @include add-transition;
+
     z-index: 0;
     background-color: $menu-overlay-color;
     height: 100vh;
     opacity: 0;
     visibility: hidden;
     transition-property: all;
-
-    @include add-transition;
 
     &.open-menu {
       opacity: 1;
