--- a/src/styles/components/header/_menu.scss
+++ b/src/styles/components/header/_menu.scss
@@ -1,6 +1,10 @@
 .menu {
-  @include on-tablet {
-    @include page-grid;
+  &__container {
+    @include content-padding-inline;
+
+    @include on-tablet {
+      @include page-grid;
+    }
   }
 
   &__controls {
