--- a/src/styles/components/main/_events.scss
+++ b/src/styles/components/main/_events.scss
@@ -40,7 +40,7 @@
     @include on-desktop {
       margin-top: 56px;
       row-gap: 104px;
-      margin-bottom: 102px;
+      margin-bottom: 127px;
     }
   }
 
@@ -50,7 +50,7 @@
     }
 
     &--padding-lecture {
-      @media (min-width: $tablet-min-width) and (max-width: calc($desktop-min-width - 1px)) {
+      @include on-tablet-to-desctop {
         padding-inline: 30px;
         max-width: $tablet-min-width;
         margin-inline: auto;
