--- a/src/styles/components/main/_popup.scss
+++ b/src/styles/components/main/_popup.scss
@@ -88,6 +88,6 @@
     width: 100%;
     height: 100%;
     position: relative;
-    box-shadow: inset 0 0 40px 9px #050505;
+    box-shadow: inset 0 0 40px 9px $popup-shadow-color;
   }
 }
