--- a/src/styles/components/footer/_footer.scss
+++ b/src/styles/components/footer/_footer.scss
@@ -6,7 +6,6 @@
     padding-bottom: 68px;
 
     @include on-tablet {
-      padding-top: 51px;
       padding-bottom: 36px;
     }
 
@@ -49,7 +48,7 @@
       bottom: 0;
       width: 100%;
       height: 1px;
-      background-color: rgba(26, 90, 76, 0.50);
+      background-color: $footer-border-color;
 
       @include on-tablet {
         grid-column: 2 / -2;
@@ -199,6 +198,6 @@
     text-align: center;
     font-size: 12px;
     font-weight: 300;
-    line-height: 140.63%;
+    line-height: 140%;
   }
 }
