--- a/src/styles/components/main/_card.scss
+++ b/src/styles/components/main/_card.scss
@@ -67,7 +67,7 @@
       position: absolute;
       bottom: -37%;
       background-color: $main-background-color;
-      box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
+      box-shadow: 0 2px 0 0 $lecture-box-shadow-color;
       transform: translateX(-50%);
       left: 50%;
 
@@ -76,7 +76,7 @@
 
         padding: 45px 55px 50px;
         column-gap: 20px;
-        margin: 0;
+        margin: 0 0 2px;
         bottom: -23%;
         min-width: 570px;
       }
@@ -193,6 +193,7 @@
       width: 10px;
       height: 10px;
       margin-left: 10px;
+      margin-top: 5px;
       background-color: $main-dots-color;
 
       @include on-tablet {
