--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$the-design-min-width: 1440px;
+$time-duration: 0.3s;
+$color-text: #000;
+$color-text-second: #0f0e08;
+$color-text-third: #687480;
+$color-text-fourth: #4e4e4e;
+$color-background: #fff;
+$color-background-second: #18181a;
+$color-background-third: #f14a27;
+$color-background-fourth: #e0e0e0;
+$color-border: #1a5a4c;
