--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,2 @@
-@font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
+@import 'https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,regular,500,700&display=swap';
+@import 'https://fonts.googleapis.com/css?family=Montserrat:regular,700&';
