--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,36 @@
-$c-gray: #eee;
+// fonts
+
+$font-family: "IBM Plex Sans", sans-serif;
+$second-family: "Montserrat", sans-serif;
+
+// colors
+
+$main-color: #0f0e08;
+$bg-color: #fff;
+$black: #000;
+$green-pea: #1a5a4c;
+$pale-sky: #687480;
+$pomegranate: #f14a27;
+$text-color: #4e4e4e;
+
+// container params
+
+$container-width: 1170px;
+$horizontal-paddings: 20px;
+
+// breakpointsWidth
+
+$pc: $container-width + ($horizontal-paddings * 2);
+$laptop: 992px;
+$mobile: 768px;
+$mobile-small: 480px;
+$min-break-point: 320px;
+
+// grid params
+
+$grid-gap: 30px;
+$grid-gap-small: 20px;
+
+// margins
+$section-margin-big: 200px;
+$section-margin-small: 40px;
