--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -75,7 +75,7 @@
     margin: 0 auto;
     background-color: $bg-color;
     box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
-    padding: clamp-calc($min-break-point, $pc, 20px, 45px) clamp-calc($min-break-point, $pc, 0, 45px);
+    padding: clamp-calc($min-break-point, $pc, 20px, 45px) clamp-calc($min-break-point, $pc, 0px, 45px);
   }
 
   &__event-info-date,
