--- a/src/styles/blocks/hero.scss
+++ b/src/styles/blocks/hero.scss
@@ -54,6 +54,23 @@
     display: flex;
     justify-content: end;
 
+    &:hover {
+
+      .hero__link-text,
+      .hero__link-btn {
+        box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
+      }
+    }
+
+    &:active {
+
+      .hero__link-text,
+      .hero__link-btn {
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.25);
+        transform: translateY(2px);
+      }
+    }
+
     @include pc {
       justify-content: start;
     }
@@ -71,6 +88,8 @@
     text-align: center;
     font-size: 16px;
     font-weight: 500;
+
+    @include transition(all);
   }
 
   &__link-btn {
@@ -80,7 +99,7 @@
     align-items: center;
     background-color: $green-pea;
 
-    @include transition(background-color);
+    @include transition(all);
 
     &:hover {
       background-color: #0a332a;
